Kubernetes/networkpolicy/networkpolicy-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-proxy-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx-proxy
  policyTypes:
  - Ingress
#  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
#    - podSelector:
#        matchLabels:
#          app: nginx-proxy
    ports:
    - protocol: TCP
      port: 8000
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 8080
#  egress:
#  - to:
#    - ipBlock:
#        cidr: 10.0.0.0/24
#    ports:
#    - protocol: TCP
#      port: 5978


#
## MIND THIS WON'T WORK WITH Flannel unless Calico joins the game.
## Also 'ipBlock' won't work with Weave prior to 2.5 (released Nov 2018)
#
